11/09/08 Julien Dutheil
* Large update on TreeLikelihoodData and TreeParsimonyData to rely mostly on
  nodes id instead of Node*. Likelihood, parsimony and substitution mapping
	methods have been updated accordingly.
* Ancestral state reconstruction method has a new method to get a
  SequenceContainer with all sequences.

10/09/08 Sophie Abby
* Corrected memory leak in BipartitionList (delete -> delete[]).

02/09/08 Julien Dutheil
* Added "real" +F protein substitution models, with frequencies estimation.

18/01/08 -*- Version 1.5.1. -*-

01/06/08 Julien Dutheil
* Bug fixed in FrequenciesSet: the sum critierion was changed to be less
restrictive! (now 1e-6).

22/05/08 Julien Dutheil
* Added method getLikelihoodData() in R(Non)HomogeneousTreeLikelihood.

06/05/08 Bastien Boussau & Simon Carrignon
* Bug fixed in TreeTools::getLastCommonAncestor.

04/04/08 Julien Dutheil
* Bug fixed in copy constructors: now NH models work with covarions.

27/03/08 Nicolas Galtier & Julien Dutheil
* Bug solved in NNIHomogeneousTreeLikelihood: branch lengths are now correctly
  actualized after a NNI movement. This bug was introduced with version 1.5.
	It mainly caused an exception to be thrown inapropriately.

20/03/08 Julien Dutheil
* Kappa parameter can no longer be 0 (avoid likelihood to be 0 in some cases)
* Newton-Raphson algorithm fixed: deals with case when f'' is equal to zero.
* Reading parameters from file (PhylogeneticApplicationTools) now deals with
  parameter constraints.
* Recopy of Abstract(Non)HomogeneousTreeLikelihood fixed.
* New methods in SubstitutionModelSet.

18/02/08 Céline Scornavacca & Julien Dutheil
* Bug fixed in TreeTemplate::newOutGroup.

21/01/08 Julien Dutheil
* New function TreeTools::checkIds, used in likelihood classes (included in
		version 1.5).
* Important bug fixed in RTreeLikelihood: derivatives are correct when nodes
  id are not reset.
* Important bug fixed in substitution mapping.