@@ -1,3 +1,7 @@
+12/09/08 Julien Dutheil
+* Ancestral sequence reconstruction debugged and now allow sampling from the
+  posterior distribution.
+
 11/09/08 Julien Dutheil
 * Large update on TreeLikelihoodData and TreeParsimonyData to rely mostly on
   nodes id instead of Node*. Likelihood, parsimony and substitution mapping
